fix(styles): change default font size to 0.8rem
1rem seems to be too large.

--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -9,6 +9,6 @@ html {
   flex-direction: column;
   height: 100vh;
   font-family: 'Poppins', sans-serif;
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: normal;
 }
